Adding Admin operations and frontend pages
